# qif-categorizer

./: .gitignore  .pre-commit-config.yaml  LICENSE  categories.json  example-with-categories.qif  example-without-categories.qif  pyproject.toml
qif_categorizer/: autocomplete.py  categorizer_ui.py  main.py  qif.py
tests/qif_categorizer/: test_qif.py
