[tool.poetry]
name = "qif-categorizer"
version = "0.1.0"
description = ""
authors = ["Edward Q. Bridges <ebridges@roja.cc>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.6.1,<3.10"
wheel = "^0.36.1"
qifparse = {git = "git://github.com/ebridges/qifparse.git"}
shiboken6 = {url = "http://download.qt.io/official_releases/QtForPython/shiboken6/shiboken6-6.0.0-6.0.0-cp36.cp37.cp38.cp39-abi3-macosx_10_14_x86_64.whl"}
pyside6 = {url = "http://download.qt.io/official_releases/QtForPython/shiboken6/PySide6-6.0.0-6.0.0-cp36.cp37.cp38.cp39-abi3-macosx_10_14_x86_64.whl"}

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
black = "^20.8b1"
pre-commit = "^2.9.3"
flake8 = "^3.8.4"

[tool.poetry.scripts]
qifcat = "qif_categorizer.main:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
skip-string-normalization = true
target-version = [ "py37",]
